Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105682

[REG 6.4.0 beta1 -> beta3] quick3d/principledmaterial not compiling on iOS

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 6.4.0 RC1
    • 6.4.0 Beta3
    • Quick: 3D
    • iOS/tvOS/watchOS, WebAssembly
    • 513f6caab8 (qt/qtdeclarative/dev) 513f6caab8 (qt/tqtc-qtdeclarative/dev) ab56ee1277 (qt/qtdeclarative/6.4) ab56ee1277 (qt/tqtc-qtdeclarative/6.4)

    Description

      Install Qt6.4.0 beta3 iOS binaries, configure example quick3d/principledmaterial

      Users/qt/RTA/Qt_6.4.0/6.4.0/ios/bin/qt-cmake -S /Users/qt/RTA/Qt_6.4.0/Examples/Qt-6.4.0/quick3d/principledmaterial -B /Users/qt/RTA/Qt_6.4.0/Examples/Qt-6.4.0/quick3d/principledmaterial/bld_ios -GNinja
      

      Finishes fine, build 'cmake --build . --parallel' in /Users/qt/RTA/Qt_6.4.0/Examples/Qt-6.4.0/quick3d/principledmaterial/bld_ios, fails:

      duplicate symbol 'lcTextInput()' in:
          /Users/qt/RTA/Qt_6.4.0/6.4.0/ios/lib/libQt6Quick.a(qquicktextinput.cpp.o)
          /Users/qt/RTA/Qt_6.4.0/6.4.0/ios/lib/libQt6QuickDialogs2QuickImpl.a(qquickfolderbreadcrumbbar.cpp.o)
      ld: 1 duplicate symbol for architecture arm64
      clang: error: linker command failed with exit code 1 (use -v to see invocation)
      ninja: build stopped: subcommand failed.
      

      (full log attached)

      Same with

      multimedia/video/mediaplayer

      webchannel/chatserver-cpp

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-105682
          # Subject Branch Project Status CR V

          Activity

            People

              lpotter Lorn Potter
              joaijala Johanna Äijälä
              Votes:
              1 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes