Fix duplicate symbol lcTextInput build failure on static builds

Fixes: QTBUG-105682
Change-Id: I8c367403b64b5a976726fff210317b4212ea8695
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
(cherry picked from commit 513f6caab89224da9f5bbf3e2a88fd11532a8e5c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>